Fix: Footer on mobile devices

--- a/style.css
+++ b/style.css
@@ -135,14 +135,22 @@ a {
 }
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
-    padding: 48px;
-    margin-bottom: 16px;
+    margin-bottom: 64px;
     display: flex;
     justify-content: center;
     align-items: center;
     color: rgba(255, 255, 255, 0.48);
+    font-size: 14px;
+    padding: 8px;
+    width: 100vw;
+    right: 0;
+    left: 0;
+}
+
+footer > p {
+    width: ;
 }
 
 .footer-link {
